fix items being too tall bug

--- a/src/components/entity.less
+++ b/src/components/entity.less
@@ -52,7 +52,7 @@
     }
 }
 
-.rg-entity-popover {
+.rg-popover-target.rg-entity-popover {
     position: absolute;
     top: 0;
     left: 0;
